[package]
name = "my_websocket_crate_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
url = "2"
 
# server_crate import
tokio-tungstenite = "0.16"
futures-util = "0.3"  
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }


# Local CRATE import
my_websocket_crate = { path = "../my_websocket_crate" } 







#BINARY

    # CLIENT Esercizio 4:

        [[bin]]
        name = "client_crate"
        path = "src/client_crate.rs"

    # SERVER Esercizio 5:

        [[bin]]
        name = "server_crate"
        path = "src/server_crate.rs"
    